<resources>
    <string name="app_name">Student Delivery</string>
    <string name="title_home">Request Delivery</string>
    <string name="title_dashboard">Be A Deliverer</string>
    <string name="title_activity_login">Student Delivery</string>
    <string name="title_notifications">Delivery Requests</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Student Delivery</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="birthday_mm_dd_yyyy">Birthday (MM/DD/YYYY)</string>
    <string name="register">Register</string>
    <string name="password_should_contain_at_least_6_characters_and_one_of_each_uppercase_lowercase_and_number">Password should contain at least 6 characters and one of each uppercase, lowercase and number</string>
</resources>
